<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:orientation="vertical"
    tools:context=".treeCrown.TreeCrownActivity">

    <!--    <View-->
    <!--        style="@style/horizontal_line_style"-->
    <!--        android:layout_marginTop="@dimen/spacing_10" />-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_6"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnShooting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_10"
            android:layout_weight="1"
            android:text="@string/btn_shooting"
            android:textSize="@dimen/font_16" />

        <Button
            android:id="@+id/deriveData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_10"
            android:layout_weight="1"
            android:text="@string/btn_derive_data"
            android:textSize="@dimen/font_16" />

        <Button
            android:id="@+id/recalculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_10"
            android:layout_marginEnd="@dimen/spacing_10"
            android:layout_weight="1"
            android:text="@string/btn_calculate"
            android:textSize="@dimen/font_16" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_4"
        android:gravity="center"
        android:text="@string/survey_record"
        android:textSize="@dimen/font_22" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_4"
        android:splitMotionEvents="false" />

    <!--    <ScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="405dp"-->
    <!--        android:layout_marginTop="@dimen/spacing_10">-->

    <!--        <androidx.recyclerview.widget.RecyclerView-->
    <!--            android:id="@+id/recyclerView"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content" />-->

    <!--    </ScrollView>-->


</LinearLayout>