<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical"
    tools:context=".treeHeight.TreeHeightActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageTree"
            android:layout_width="140sp"
            android:layout_height="180dp"
            android:layout_marginStart="@dimen/spacing_6"
            android:layout_marginTop="@dimen/spacing_10"
            android:src="@color/green" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_10"
            android:layout_marginTop="@dimen/spacing_10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tree_name"
                    android:textSize="@dimen/font_20" />

                <TextView
                    android:id="@+id/textTreeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textSize="@dimen/font_20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_height"
                    android:textSize="@dimen/font_20" />

                <TextView
                    android:id="@+id/textPhoneHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textSize="@dimen/font_20" />
                <!--                <TextView-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:text="米"-->
                <!--                    android:textSize="@dimen/font_20" />-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_angle"
                    android:textSize="@dimen/font_20" />

                <TextView
                    android:id="@+id/textPhoneAngle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textSize="@dimen/font_20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slope_angle"
                    android:textSize="@dimen/font_20" />

                <TextView
                    android:id="@+id/textSlopeAngle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textSize="@dimen/font_20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tree_height_value"
                    android:textSize="@dimen/font_20" />

                <TextView
                    android:id="@+id/textTreeHeightValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textSize="@dimen/font_20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tree_DBH_value"
                    android:textSize="@dimen/font_20" />

                <TextView
                    android:id="@+id/textTreeDBHValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textSize="@dimen/font_20" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <!--    <View-->
    <!--        style="@style/horizontal_line_style"-->
    <!--        android:layout_marginTop="@dimen/spacing_10" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_6"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnShooting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_10"
            android:layout_weight="1"
            android:text="@string/btn_shooting"
            android:textSize="@dimen/font_16" />

        <Button
            android:id="@+id/deriveData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_10"
            android:layout_weight="1"
            android:text="@string/btn_derive_data"
            android:textSize="@dimen/font_16" />

        <Button
            android:id="@+id/recalculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_10"
            android:layout_marginEnd="@dimen/spacing_10"
            android:layout_weight="1"
            android:text="@string/btn_calculate"
            android:textSize="@dimen/font_16" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_4"
        android:gravity="center"
        android:text="@string/survey_record"
        android:textSize="@dimen/font_22" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_6"
        android:splitMotionEvents="false" />

    <!--    <ScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="405dp"-->
    <!--        android:layout_marginTop="@dimen/spacing_10">-->

    <!--        <androidx.recyclerview.widget.RecyclerView-->
    <!--            android:id="@+id/recyclerView"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content" />-->

    <!--    </ScrollView>-->


</LinearLayout>