<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".treeHeight.HeightImageSaveFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_14"
            android:layout_marginTop="@dimen/spacing_10"
            android:layout_marginEnd="@dimen/spacing_14"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageTree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/btn_measure" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_24"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tree_name"
                    android:textSize="@dimen/font_20" />

                <EditText
                    android:id="@+id/editTreeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="未命名0"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:textSize="@dimen/font_20" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_height"
                    android:textSize="@dimen/font_20" />

                <EditText
                    android:id="@+id/editPhoneHeight"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:lines="1"
                    android:digits="0123456789."
                    android:textSize="@dimen/font_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="米"
                    android:textSize="@dimen/font_20" />

                <Button
                    android:id="@+id/btn_phoneHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:layout_marginStart="@dimen/spacing_10"
                    android:text="测量"
                    android:textSize="@dimen/font_16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slope_angle"
                    android:textSize="@dimen/font_20" />

                <EditText
                    android:id="@+id/editSlopeAngle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:textSize="@dimen/font_20"
                    android:inputType="number" />

                <Button
                    android:id="@+id/btn_slopeAngle"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:layout_marginStart="@dimen/spacing_10"
                    android:text="测量"
                    android:textSize="@dimen/font_16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_10"
                    android:text="@string/phone_angle"
                    android:textSize="@dimen/font_20" />

                <TextView
                    android:id="@+id/textPhoneAngle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_10"
                    android:lines="1"
                    android:textSize="@dimen/font_20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_18"
                    android:text="@string/shooting_date"
                    android:textSize="@dimen/font_20" />

                <TextView
                    android:id="@+id/textShootingDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_18"
                    android:lines="1"
                    android:textSize="@dimen/font_20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_35"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginEnd="@dimen/spacing_35"
                android:layout_marginBottom="@dimen/spacing_24"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_cancel"
                    android:textSize="@dimen/font_18" />

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_35"
                    android:layout_weight="1"
                    android:text="@string/btn_confirm"
                    android:textSize="@dimen/font_18" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</FrameLayout>